--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
         href="" 
         class="link footer__link"
       >  
-        Created By Joshua Eapen. <!-- edit it to your name -->
+        Created By Joshua Eapen.
       </a>
     </footer>
 
